Add more dependencies.

--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -17,6 +17,8 @@
     "import os\n",
     "from textblob import TextBlob \n",
     "import re\n",
+    "import csv\n",
+    "import time\n",
     "\n",
     "# your twitter app credentials\n",
     "CONSUMER_KEY = <Your Consumer Key>\n",
@@ -55,6 +57,13 @@
     "        \n",
     "        return None"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
