Create dataset for Justin Trudea tweets.

--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -13,23 +13,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import twitter\n",
-    "import os\n",
-    "from textblob import TextBlob \n",
-    "import re\n",
-    "import csv\n",
+    "import tweepy\n",
     "import time\n",
     "\n",
     "# your twitter app credentials\n",
-    "CONSUMER_KEY = <Your Consumer Key>\n",
-    "CONSUMER_SECRET = <Your Consumer Secret>\n",
-    "ACCESS_TOKEN = <Your Access Token>\n",
-    "ACCESS_SECRET = <Your Access Secret>\n",
+    "CONSUMER_KEY = <YOUR CONSUMER KEY>\n",
+    "CONSUMER_SECRET = <YOUR CONSUMER SECRET>\n",
+    "ACCESS_TOKEN = <YOUR ACCESS TOKEN>\n",
+    "ACCESS_SECRET = <YOUR ACCESS SECRET>\n",
     "\n",
-    "twitter_api = twitter.Api(consumer_key=CONSUMER_KEY,\n",
-    "                consumer_secret=CONSUMER_SECRET,\n",
-    "                access_token_key=ACCESS_TOKEN,\n",
-    "                access_token_secret=ACCESS_SECRET)"
+    "# create twitter api object with your credentials using tweepy\n",
+    "auth = tweepy.OAuthHandler(CONSUMER_KEY, CONSUMER_SECRET)\n",
+    "auth.set_access_token(ACCESS_TOKEN, ACCESS_SECRET)\n",
+    "api = tweepy.API(auth)"
    ]
   },
   {
@@ -37,33 +33,36 @@
    "metadata": {},
    "source": [
     "### Create Dataset\n",
-    "Twitter has a limit on how many requests a user can make through the API as a security measure. This function will constantly update a csv file with twitter data based off a keyword."
+    "Twitter has a limit on how many tweets you can return from it's API on a given user. This limit is 3200, therefore we will gather a dataset of the 3200 most recent tweets from a user using the below function. It will save the tweets to a CSV file with the name of the twitter handle that is passed into the function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def buildDataset(keyword):\n",
+    "def getTweets(twitter_handle):\n",
     "    try:\n",
-    "        tweets = twitter_api.GetSearch(keyword, count = 100)\n",
-    "        print(\"Fetched \" + str(len(tweets)) + \"tweets for the term \" + keyword)\n",
+    "        tweets = tweepy.Cursor(api.user_timeline, screen_name = twitter_handle, exclude_replies = True, include_rts = False).items()\n",
     "        \n",
-    "        return [{\"text\":status.text, \"label\":None} for status in tweets]\n",
-    "    except:\n",
-    "        print(\"Error has occured getting tweets.\")\n",
+    "        return (status.text for status in tweets)\n",
+    "    except tweepy.TweepError:  \n",
+    "        print(\"Waiting...\")\n",
+    "        time.sleep(60)\n",
     "        \n",
-    "        return None"
+    "        return None\n",
+    "\n",
+    "def buildDataset(twitter_handle):\n",
+    "    data = getTweets(twitter_handle)\n",
+    "    with open(twitter_handle+'.csv', 'w', encoding = 'utf-8') as file:\n",
+    "        for tweet in data:\n",
+    "            file.write(tweet)\n",
+    "            file.write('\\n')\n",
+    "\n",
+    "#create CSV file with Trudeau tweets\n",
+    "buildDataset(\"JustinTrudeau\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
