Changed getTweets to return full tweet and not truncated version

--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -44,9 +44,9 @@
    "source": [
     "def getTweets(twitter_handle):\n",
     "    try:\n",
-    "        tweets = tweepy.Cursor(api.user_timeline, screen_name = twitter_handle, exclude_replies = True, include_rts = False).items()\n",
+    "        tweets = tweepy.Cursor(api.user_timeline, screen_name = twitter_handle, exclude_replies = True, include_rts = False, tweet_mode = 'extended').items()\n",
     "        \n",
-    "        return (status.text for status in tweets)\n",
+    "        return (status.full_text for status in tweets)\n",
     "    except tweepy.TweepError:  \n",
     "        print(\"Waiting...\")\n",
     "        time.sleep(60)\n",
