Added functionality to cleanData function

--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -16,6 +16,9 @@
     "import tweepy\n",
     "import time\n",
     "import re\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "from string import punctuation\n",
     "\n",
     "# your twitter app credentials\n",
     "CONSUMER_KEY = <YOUR CONSUMER KEY>\n",
@@ -83,8 +86,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning and Preprocessing Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +102,10 @@
     "    with open(twitter_handle+'.csv', 'r', encoding = 'utf-8') as file:\n",
     "        with open(twitter_handle+'_cleaned.csv', 'w', encoding = 'utf-8') as clean_file:\n",
     "            for tweet in file:\n",
-    "                tweet = re.sub(r'https?:\\/\\/.*[\\r\\n]*', '\\n', tweet)\n",
+    "                tweet = tweet.lower() #lower case\n",
+    "                tweet = re.sub(r'https?:\\/\\/.*[\\r\\n]*', '\\n', tweet) #remove all URLs\n",
+    "                tweet = re.sub('@[^\\s]+', '', tweet) #remove the @users\n",
+    "                tweet = re.sub(r'#([^\\s]+)', r'\\1', tweet) # remove the # in #hashtag\n",
     "                clean_file.write(tweet)\n",
     "            clean_file.close()\n",
     "        file.close()"
@@ -100,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -111,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
