Import stopwords from nltk

--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tweepy\n",
     "import time\n",
     "import re\n",
+    "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.corpus import stopwords\n",
     "from string import punctuation\n",
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -124,11 +125,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "cleanData(\"realDonaldTrump\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'both', 'down', 'she', 'be', 'it', \"it's\", 'have', 'shouldn', 'himself', 'if', 'with', 'i', 'wasn', 'me', 'but', 'other', 'itself', 'their', 'until', 'been', 'should', 'doesn', 'further', 'any', \"you're\", \"mightn't\", \"haven't\", 'above', 'this', \"shouldn't\", 'ourselves', 'they', 'while', 'out', 'off', 'herself', 'now', 'aren', 'of', 'nor', 'does', 'll', 'our', 'haven', 'his', 'what', 'few', 'd', \"couldn't\", 'up', \"didn't\", \"needn't\", 'yourselves', 'being', 'about', 'on', 'having', 'did', 'hasn', 'your', 'in', 'own', 's', 'after', 'shan', 'such', 'mustn', 'will', 'won', 're', 'to', 'doing', 'o', 'we', 'yours', 'ma', 'mightn', 'an', 'over', \"hadn't\", 'more', 'all', 'so', 'during', 'didn', 'against', 'there', 'weren', \"you've\", 'myself', 'then', 'you', 'do', 'not', 'most', 'couldn', \"you'll\", 'before', 'and', 'has', 'each', 'don', 'when', 'wouldn', 'the', 'y', 'them', 'again', 'that', 'him', \"isn't\", \"don't\", \"she's\", 'hadn', 'why', \"mustn't\", 'at', 'same', 'isn', \"doesn't\", 'theirs', 'too', 'can', 'had', 'here', 'where', 'through', 'her', \"should've\", 'as', 'hers', 'very', 'just', 'between', \"hasn't\", \"that'll\", \"aren't\", \"won't\", 'themselves', 'below', 'once', 'some', 'by', \"shan't\", 'are', 'under', 'he', 'whom', 'for', 'is', 'am', 'those', 'ours', 'no', 'needn', 'these', 'from', 'how', 'was', 'or', 'only', 've', 'its', \"wasn't\", \"wouldn't\", 'than', 'because', 'my', \"weren't\", 'which', 'were', 'm', 'yourself', \"you'd\", 'who', 'a', 'into', 'ain', 't'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "stop_words = set(stopwords.words('english')) \n",
+    "print(stop_words)"
    ]
   }
  ],
