Refactored data to test folder and renamed functions

--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getTweets(twitter_handle):\n",
+    "def get_tweets(twitter_handle):\n",
     "    try:\n",
     "        tweets = tweepy.Cursor(api.user_timeline, screen_name = twitter_handle, exclude_replies = True, include_rts = False, tweet_mode = 'extended').items()\n",
     "        \n",
@@ -58,9 +58,9 @@
     "        \n",
     "        return None\n",
     "\n",
-    "def buildDataset(twitter_handle):\n",
-    "    data = getTweets(twitter_handle)\n",
-    "    with open(twitter_handle+'.csv', 'w', encoding = 'utf-8') as file:\n",
+    "def build_test_dataset(twitter_handle):\n",
+    "    data = get_tweets(twitter_handle)\n",
+    "    with open(\"Test Data/\"+twitter_handle+'.csv', 'w', encoding = 'utf-8') as file:\n",
     "        for tweet in data:\n",
     "            file.write(tweet)\n",
     "            file.write('\\n')"
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "#create CSV file with Trudeau tweets\n",
-    "buildDataset(\"JustinTrudeau\")"
+    "build_test_dataset(\"JustinTrudeau\")"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "#create CSV file with Trump tweets\n",
-    "buildDataset(\"realDonaldTrump\")"
+    "build_test_dataset(\"realDonaldTrump\")"
    ]
   },
   {
@@ -99,9 +99,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cleanData(twitter_handle):\n",
-    "    with open(twitter_handle+'.csv', 'r', encoding = 'utf-8') as file:\n",
-    "        with open(twitter_handle+'_cleaned.csv', 'w', encoding = 'utf-8') as clean_file:\n",
+    "def clean_data(twitter_handle):\n",
+    "    with open(\"Test Data/\"+twitter_handle+'.csv', 'r', encoding = 'utf-8') as file:\n",
+    "        with open(\"Test Data/\"+twitter_handle+'_cleaned.csv', 'w', encoding = 'utf-8') as clean_file:\n",
     "            for tweet in file:\n",
     "                tweet = tweet.lower() #lower case\n",
     "                tweet = re.sub(r'https?:\\/\\/.*[\\r\\n]*', '\\n', tweet) #remove all URLs\n",
@@ -120,7 +120,7 @@
    },
    "outputs": [],
    "source": [
-    "cleanData(\"JustinTrudeau\")"
+    "clean_data(\"JustinTrudeau\")"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleanData(\"realDonaldTrump\")"
+    "clean_data(\"realDonaldTrump\")"
    ]
   },
   {
