Drop sentiment source from dataframe

--- a/build_model.ipynb
+++ b/build_model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This notebook handles loading data and training model\n",
+    "## This notebook handles loading data and training the model\n",
     "### Import Dependencies"
    ]
   },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "4           i think mi bf is cheating on me!!!   ...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "(1578612, 4)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,6 +147,135 @@
    "source": [
     "# look at size of data\n",
     "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ItemID</th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>SentimentText</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>is so sad for my APL frie...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>I missed the New Moon trail...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>omg its already 7:30 :O</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>.. Omgaga. Im sooo  im gunna CRy. I'...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>i think mi bf is cheating on me!!!   ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1578607</td>\n",
+       "      <td>1578623</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Zzzzzz.... Finally! Night tweeters!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1578608</td>\n",
+       "      <td>1578624</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Zzzzzzz, sleep well people</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1578609</td>\n",
+       "      <td>1578625</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ZzzZzZzzzZ... wait no I have homework.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1578610</td>\n",
+       "      <td>1578626</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ZzZzzzZZZZzzz meh, what am I doing up again?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1578611</td>\n",
+       "      <td>1578627</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Zzzzzzzzzzzzzzzzzzz, I wish</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1578612 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ItemID  Sentiment                                      SentimentText\n",
+       "0              1          0                       is so sad for my APL frie...\n",
+       "1              2          0                     I missed the New Moon trail...\n",
+       "2              3          1                            omg its already 7:30 :O\n",
+       "3              4          0            .. Omgaga. Im sooo  im gunna CRy. I'...\n",
+       "4              5          0           i think mi bf is cheating on me!!!   ...\n",
+       "...          ...        ...                                                ...\n",
+       "1578607  1578623          1               Zzzzzz.... Finally! Night tweeters! \n",
+       "1578608  1578624          1                        Zzzzzzz, sleep well people \n",
+       "1578609  1578625          0            ZzzZzZzzzZ... wait no I have homework. \n",
+       "1578610  1578626          0      ZzZzzzZZZZzzz meh, what am I doing up again? \n",
+       "1578611  1578627          0                       Zzzzzzzzzzzzzzzzzzz, I wish \n",
+       "\n",
+       "[1578612 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.drop(['SentimentSource'], axis=1)"
    ]
   }
  ],
